1. change all background to debian.jpg 2. fix viewer title font overflow when showing multi-line text 3. add logout.js to all html

--- a/myserver/web/css/index.css
+++ b/myserver/web/css/index.css
@@ -2,7 +2,7 @@ a {
     text-decoration: none;
 }
 body {
-    background: url(/res/image/ladymaria.jpg);
+    background: url(/res/image/debian.jpg);
     background-size: 100% 100%;
     background-repeat: repeat-y;
     background-attachment: fixed;
