--- a/myserver/web/css/login.css
+++ b/myserver/web/css/login.css
@@ -2,7 +2,7 @@ body {
     margin: 0px;
     padding: 0px;
     font-family: sans-serif;
-    background: url(/res/image/yrel-com.jpg);
+    background: url(/res/image/debian.jpg);
     background-attachment: fixed;
     background-size: 100% 100%;
     background-repeat: repeat;
